Add Render.com deployment config
Move hardcoded backend/frontend URLs, CORS origins and DB connection
settings behind environment variables with local defaults preserved,
and add Dockerfiles + render.yaml blueprint for hosting the frontend,
backend, database and Succulent IoT service on Render.